--- a/package.json
+++ b/package.json
@@ -116,5 +116,14 @@
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.12.0",
     "typescript": "^3.0.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "ts-loader": "^6.0.4",
+    "tslint-loader": "^3.5.4",
+    "webpack": "^4.35.2",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
